Outline for workshop in workshop.Rmd

--- a/workshop.Rmd
+++ b/workshop.Rmd
@@ -13,3 +13,17 @@ This code computes the answer to one plus one, change it so it computes two plus
 ```{r addition, exercise=TRUE}
 1 + 1
 ```
+# Actual workshop goes here!
+
+## Hello World
+
+## Dice Rolls
+### Weighting Dice Rolls
+### Dataviz: Dice Rolls
+
+## CSVs
+### Getting CSVs
+### Cleaning unclean CSVs
+### Dataviz: CSVs
+
+## ... ?
