--- a/workshop.Rmd
+++ b/workshop.Rmd
@@ -28,8 +28,11 @@ This code computes the answer to one plus one, change it so it computes two plus
 #### Data frames
 #### Subsetting data frames
 
+### THE TIDYVERSE
+#### What is the tidyverse
+#### Some tidyverse packages of note:
 ### ggplot2
-
+### others
 
 
 ## Dice Rolls
