--- a/workshop.Rmd
+++ b/workshop.Rmd
@@ -13,6 +13,8 @@ This code computes the answer to one plus one, change it so it computes two plus
 ```{r addition, exercise=TRUE}
 1 + 1
 ```
+# pre-setup: can we prep an rstudio.cloud instance with certain things preloaded? (ggplot2, tidyverse, monty hall?)
+
 # Actual workshop goes here!
 
 ## WHO AM I
@@ -31,7 +33,7 @@ This code computes the answer to one plus one, change it so it computes two plus
 ##### How can I read data in R?
 ##### Basic data types
 #### variables, integers, etc etc
-#### vectors (example dice - die <- c(1,2,3,4,5,6))
+#### vectors (example dice - die <- c(1:6))
 #### Data frames
 #### Subsetting data frames
 
